--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             var numA =7;
             var numB = 10;
 
-            text1="Hello everyone on planet Earth";
+            text1="Hello everyone on planet world earth";
             text2="I love learning JS";
             text3=" JS Is Awesome!";
 
